--- a/normalize.css
+++ b/normalize.css
@@ -1,5 +1,13 @@
 body {
+  margin: 0;
+}
+
+ul {
   all: unset;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 html {
@@ -13,6 +21,11 @@ kbd,
 samp {
   font-family: monospace, monospace;
   font-size: 1em;
+}
+
+p {
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 b,
