organize resources and start working on reader

--- a/resources/components/navigation-bar/styles.css
+++ b/resources/components/navigation-bar/styles.css
@@ -1,3 +1,14 @@
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  max-height: 100dvh;
+}
+
+main {
+  flex: 1;
+}
+
 navigation-bar {
   cursor: none;
 }
