--- a/resources/styles/shared.css
+++ b/resources/styles/shared.css
@@ -3,6 +3,7 @@ html {
   --foreground: #3d3d3d;
   --accent: 62, 0, 255;
   accent-color: rgb(var(--accent), 0.2);
+  --box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 body {
@@ -11,8 +12,6 @@ body {
   ::selection {
     background-color: rgb(var(--accent), 0.4);
   }
-  display: flex;
-  flex-direction: column;
   height: 100vh;
   max-height: 100dvh;
   position: relative;
@@ -20,6 +19,5 @@ body {
 }
 
 main {
-  flex: 1;
   overflow-y: auto;
 }
